# mrsearch

./: .gitignore  Instructions-Juliana.txt  README.md  a1-check-curiosity.rviz  frames.gv  mrsearch-real.rviz
actor_plugin/: CMakeLists.txt
actor_plugin/include/: ActorPlugin.hh  ActorPlugin_backup.hh  ActorPlugin_origin.hh
actor_plugin/src/: ActorCollisionPlugin.cc  ActorPlugin_origin.cc  ActorPlugin_ros.cc  ActorPlugin_ros_backup.cc  ActorPlugin_waypoint.cc
gmm/: CMakeLists.txt  package.xml
gmm/action/: Prediction.action
gmm/include/: human_belief.h
gmm/scripts/: prediction_client.py  prediction_client2.py
gmm/src/: human_belief.cpp  sample_test.cpp
search_service/: CMakeLists.txt  frames.gv  package.xml
search_service/action/: FakeMultiSearch.action  FastApproach.action  GetSmoothPath.action  MultiSearch.action  PathFollow.action  Search.action  SetSearchRegion.action  SingleTSPSolve.action  TSPSolve.action
search_service/config/: ahg.yaml  ahg_real.yaml  ahgconfig.yaml  backup_boundaries.yaml  boundaries.yaml  config.yaml  config_1.yaml  hsrb.rviz  paths.yaml  paths2.yaml  paths3.yaml  paths_prior.yaml  visual_paths.yaml  wboundary.yaml
search_service/include/: cluster.h  geometry_tools.h  map_util.h  plugin_client.h  spline.h  waypoint_prediction_action.cpp
search_service/launch/: a1_curiosity.launch  ahg-real-curiosity-search-server.launch  ahg-real-search-server.launch  ahg-real-visual-server.launch  fake_two_search.launch  five_turtles.launch  fov.launch  hsrb_enml.launch  hsrb_stsp_search.launch  jackal_nrg.launch  jackal_stsp_search.launch  map.launch  marl-map-manager.launch  mtsp_search.launch  mtsp_search_curiosity.launch  mtsp_search_nrg.launch  mtsp_search_three_turtle.launch  mtsp_search_tt.launch  mtsp_turtles.launch  nrg_mtsp_search.launch  nrg_sim_two.launch  pathfollow.launch  pathfollow_client.launch  pathfollowclient.launch  playback.launch  pose_pub.launch  smtsp_search.launch  tt4.launch  walrus_stsp_search.launch  waypoint.launch
search_service/rviz/: fall-2022-playback.rviz  fr_exp.rviz  jackal.rviz  playback.rviz  survey_demo.rviz  walrus.rviz
search_service/scripts/: a1_clicknavi.py  a1_move  a1_move_click  a1_navidemo.py  a1_odom  a1_odomtest  a1_waypoints.py  approach_server.py  follow_waypoints.py  head_joint_control  hsr_move.py  hsr_movenode  hsr_movenode.py  hsr_odom  hsr_search_server.py  hsr_search_server_noenml.py  hsr_waypoints.py  hsrb_odom  jackal_localization_pose.sh  load_config.py  load_paths.py  load_vectormap.py  localization_pose.sh  localnavi_client.py  map_manager.py  map_manager_single.py  model_predictive_trajectory_generator.py  motion_model.py  mtsp.py  multi_cm_simulation.py  multi_search_server.py  multimultiplan_srv_client.py  multiplan_srv_client.py  multiplan_srv_path_action_client.py  multisearch_action_client.py  path_follow_server  path_publisher.py  pathfollow_client  pathfollow_client.py  pathfollow_client2.py  (+17 more)
search_service/src/: a1_odom_switcher.cpp  cluster.cpp  cluster_test.cpp  fake_mtsp_server.cpp  get_forwardpath_server.cpp  get_visualpath_server.cpp  getsmooth_server.cpp  hsrb_odom_publisher.cpp  hsrb_odom_switcher.cpp  inspection_client.cpp  map_util.cpp  marl_costmap_manager.cpp  mtsp_server.cpp  mtsp_server_forward_path.cpp  mtsp_server_sim.cpp  multisearch_seerver.bak  multisearch_server.bak  multisearch_server.cpp  plugin_client.cpp  scaled_map_converter.cpp  sim_multisearch.cpp  singlesearch_server_hsr.cpp  spline_test.cpp  stsp_server.cpp  tb1_publisher.cpp  tb2_publisher.cpp  tb3_publisher.cpp  tb4_publisher.cpp  tb5_publisher.cpp
tmp/: CMakeLists.txt  package.xml
tmp/config/: a1.rviz  amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_spot2.yaml  costmap_common_params_spot3.yaml  five_turtles.rviz  global_costmap_params.yaml  global_costmap_params_spot2.yaml  global_costmap_params_spot3.yaml  hsb.yaml  hsrb_display_full_hsrb.rviz  hsrb_display_viz.rviz  hsrb_spot.rviz  local_costmap_params.yaml  local_costmap_params_spot2.yaml  local_costmap_params_spot3.yaml  spot.rviz  spot_turtlebot.rviz  tmc_obstacle_grid_mapper_local.yaml
tmp/launch/: amcl_diff.launch  amcl_diff.xml  amcl_diff2.launch  amcl_diff3.launch  amcl_diff_a1.launch  amcl_husky.launch  five_spot_ahg.launch  five_turtles_disaster.launch  four_turtle_home_outdoor.launch  four_turtles_disaster.launch  husky_amcl.launch  husky_move_base.launch  impedance_control_node.launch  jackal_curiosity.launch  jackal_gazebo_curiosity.launch  jackal_real_curiosity.launch  map_launch.launch  modular_spot_ahg.launch  multi_hsr_turtlebot_example.launch  multi_human_working.launch  multi_spot_ahg.launch  multi_spot_diaster.launch  multi_spot_disaster.launch  spawn_husky.launch  spot_ahg.launch  spot_three_turtles_disaster.launch  spot_turtle_disaster.launch  tb3_move_base.launch  three_spot_ahg.launch  three_turtle_home_outdoor.launch  turtle_ahg.launch  turtle_amcl.launch  turtlebot3_world.launch  turtlebot_gazebo_curiosity.launch  turtlebot_two_ahg.launch  turtlebot_two_gazebo_curiosity.launch  two_turtle_apt.launch  ut_jackal.launch
tmp/maps/: ASE1.pgm  ASE1.yaml  ASE1_blackregions.pgm  ahg-alley.pgm  ahg-alley.yaml  ahg-apartment.pgm  ahg-apartment.yaml  ahg2_map.yaml  ahg3_map.yaml  ahg4_map.yaml  ahg5_map.yaml  ahg6_map.yaml  ahg7_map.yaml  ahg_map_rev.yaml  ase4.pgm  ase4.yaml  ase4_old.pgm  ase4_old2.pgm  campus.yaml  campus2.yaml  campus3.yaml  disaster.pgm  disaster.yaml  disaster_rot.pgm  disaster_walls.yaml  full_demo_map.yaml  home_outdoor.pgm  home_outdoor.yaml  home_outdoor_rot.pgm  home_outdoor_rot_empty.pgm  map-cropped.pgm  map.yaml
tmp/params/: default_hand_weight_config.yaml  hsrb_bringup.xml  hsrb_sensor_config.yaml  tmc_map_merger_sample.yaml
tmp/robots/: hokuyo_gpu.xacro  hsrb4s.urdf
tmp/vectormaps/: ahg-alley.vectormap.txt
tmp/worlds/: ahg_apartment.world  apartment.world  apartment_human.world  apartment_human_backup.world  backup.world  blue.dae  disaster.world  disaster_walls.world  (+4 more)
visual_perception/: CMakeLists.txt  package.xml
(+151 files in other folders)
