<package>
  <name>tmp</name>
  <version>0.6.3</version>
  <description>
    Temporary package to get two HSRs in sim
  </description>
  <author>Armin Hornung</author>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>  
  
  <url>http://ros.org/wiki/octomap_mapping</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_mapping/issues</url>
  <url type="repository">https://github.com/OctoMap/octomap_mapping</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>  

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>  
</package>
